# hippotrainer

./: .buildinfo  .gitignore  PLANNING.md  README.md  genindex.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  usage.html
.github/workflows/: docs.yml  pypi.yml  tests.yml
_modules/: index.html
_modules/hippotrainer/: hyper_optimizer.html  neumann.html  t1_t2.html
_sources/: index.md.txt  index.rst.txt  installation.md.txt  modules.rst.txt
_sources/hippotrainer/: hyper_optimizer.md.txt  neumann.md.txt  t1_t2.md.txt
assets/: hoag.md
docs/: Makefile  conf.py  index.rst  modules.rst
docs/source/: conf.py  modules.rst  usage.md
docs/source/hippotrainer/: drmad.md  hoag.md  index.md
hippotrainer/: drmad.html  hoag.html  hyper_optimizer.html  index.html  neumann.html  t1_t2.html
notebooks/: basic_code.ipynb  computation_graph  debug_utils.py  demo.ipynb  hyperopt_debug.ipynb  trajectory_gradient.ipynb
src/hippotrainer/: __init__.py  direct.py  dr_mad.py  hyper_optimizer.py  hyperoptimizer.py  neumann.py  none_trainer.py  t1_t2.py  t1t2.py
tests/: t1t2.py
