[project]
name = "hippotrainer"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy"
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "furo>=2024.1.29",
    "sphinx-copybutton>=0.5.2",
    "myst_parser",
]
tests = [
    "pytest",
    "coverage",
    "scikit-learn",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 90